--- a/front/src/styles/home.css
+++ b/front/src/styles/home.css
@@ -27,23 +27,40 @@
 .we-transform-title {
     font-family: 'Monserrat', sans-serif;
     font-weight: 600;
+    font-size: 53px;
 }
 
 .we-trnsf-sec-txt{
     font-family: 'Monserrat', sans-serif;
     font-size: 20px;
 }
-
-.news-text-styles{
+.description-txt{
+    font-family: 'Monserrat', sans-serif;
+    font-size: 20px;
+}
+.news-bigtxt-styles{
     font-family: 'Monserrat', sans-serif;
     font-size: 40px;
     font-weight: 600;
     line-height: 2.25rem;
 }
-.scrollbar-hide::-webkit-scrollbar {
+.txt-button{
+    font-family: 'Monserrat', sans-serif;
+    font-size: 20px;
+}
+.date-news-styles{
+    font-family: 'Monserrat', sans-serif;
+    font-size: 20px;
+}
+.digi-title-style{
+    font-family: 'Monserrat', sans-serif;
+    font-size: 53px;
+    font-weight: 600;
+}
+/* .scrollbar-hide::-webkit-scrollbar {
     display: none;
   }
   .scrollbar-hide {
     -ms-overflow-style: none;
     scrollbar-width: none;
-  }
+  } */
